--- a/contacts.html
+++ b/contacts.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
+    <link rel="stylesheet" href="./css/sidebar.css">
+    <link rel="stylesheet" href="./css/contacts.css">
 </head>
+
 <body>
     
+    <div class="navMainContent"></div>
+    <div>
+        <h1>Contacts</h1>
+    </div>
 
+ 
 </body>
 </html>
