contacts headline and sidebar

--- a/contacts.html
+++ b/contacts.html
@@ -7,13 +7,18 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="./css/sidebar.css">
     <link rel="stylesheet" href="./css/contacts.css">
+    <link rel="stylesheet" href="./css/header.css">
 </head>
 
 <body>
-    
     <div class="navMainContent"></div>
+    <header>
+        <div class="headerText">
+        Kanban Project Management Tool</div>     
+    </header>
     <div>
-        <h1>Contacts</h1>
+       <!---- <h2>Contactliste</h2> ----->
+        <p class="headline">Contacts</p>
     </div>
 
  
