--- a/board.html
+++ b/board.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100&display=swap"
-      rel="stylesheet"
-    />
-
+    <link rel="stylesheet" href="css/inter.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/board.css" />
     <script src="js/todosArray.js" defer></script>
     <script src="js/board.js" defer></script>
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Board</title>
   </head>
   <body onload="updateHTML()">
     <head></head>
