Board added Filter
Search Filter added
checkboxes for Subtasks added

--- a/board.html
+++ b/board.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/inter.css" />
+    <link rel="stylesheet" href="css/open_sans.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/board.css" />
     <script src="js/todosArray.js" defer></script>
@@ -20,7 +21,7 @@
       <div class="boardHeaderInteract">
         <div class="inputWithImg">
           <input id="findTask" type="text" placeholder="Find Task" />
-          <div class="findTaskImg"></div>
+          <div class="findTaskImg" onclick="searchTask()"></div>
         </div>
         <button onclick="addTaskFunktion()">
           Add task
