--- a/task.html
+++ b/task.html
@@ -29,17 +29,18 @@
                             </label>
                             <input class="task-form-input" type="text" name="title" id="title" placeholder="Enter a title"
                                 required>
-                            <label class="task-form-label" for="text">Description</label>
-                            <textarea class="task-form-text" name="text" id="text" placeholder="Enter a Description"
+                            <label class="task-form-label" for="description">Description</label>
+                            <textarea class="task-form-text" name="text" id="description" placeholder="Enter a Description"
                                 required></textarea>
                             <label class="task-form-label" for="assign">Assigned to</label>
                             <div class="task-dropdown-container">
-                                <span class="task-arrow-dropdown">
+                                <span id="arrow-assign" class="task-arrow-dropdown">
                                     <svg viewBox="0 0 8 5">
                                         <use href="assets/img/icons.svg#arrow-icon"></use>
                                     </svg>
                                 </span>
-                                <div class="task-assign" id="assign">Select contacts to assign</div>
+                                <input class="task-assign" id="assign" type="text"  name="assign" value="Select contacts to assign" onclick="showAssignDropdown()">
+                                <div id="assign-content"></div>
                             </div>
                         </div>
                         <div class="task-input-container">
@@ -48,22 +49,22 @@
                                     <use href="assets/img/icons.svg#star-icon"></use>
                                 </svg>
                             </label>
-                            <input class="task-form-input" type="text" name="title" id="title" placeholder="Enter a title"
+                            <input class="task-form-date" type="text" name="date" id="date" placeholder="dd/mm/yyyy"
                                 required>
                             <div class="task-form-label">Prio</div>
                             <div class="task-form-prio">
-                                <div class="task-form-btn">Urgent
-                                    <svg class="task-form-prio-icon" viewBox="0 0 21 16">
+                                <div class="task-form-btn" id="urgent-btn" onclick="selectPrioButton('urgent-btn')">Urgent
+                                    <svg class="task-form-urgent-icon" viewBox="0 0 21 16">
                                         <use href="assets/img/icons.svg#urgentprio-icon"></use>
                                     </svg>
                                 </div>
-                                <div class="task-form-btn">Medium
-                                    <svg class="task-form-prio-icon" viewBox="0 0 21 8">
+                                <div class="task-form-btn" id="medium-btn" onclick="selectPrioButton('medium-btn')">Medium
+                                    <svg class="task-form-medium-icon" viewBox="0 0 21 8">
                                         <use href="assets/img/icons.svg#mediumprio-icon"></use>
                                     </svg>
                                 </div>
-                                <div class="task-form-btn">Low
-                                    <svg class="task-form-prio-icon" viewBox="0 0 21 16">
+                                <div class="task-form-btn" id="low-btn" onclick="selectPrioButton('low-btn')">Low
+                                    <svg class="task-form-low-icon" viewBox="0 0 21 16">
                                         <use href="assets/img/icons.svg#lowprio-icon"></use>
                                     </svg>
                                 </div>
@@ -74,12 +75,13 @@
                                 </svg>
                             </label>
                             <div class="task-dropdown-container">
-                                <span class="task-arrow-dropdown">
+                                <span id="arrow-category" class="task-arrow-dropdown">
                                     <svg viewBox="0 0 8 5">
                                         <use href="assets/img/icons.svg#arrow-icon"></use>
                                     </svg>
                                 </span>
-                                <div class="task-category" id="category">Select task category</div>
+                                <div class="task-category" id="category" onclick="showCategoryDropdown()">Select task category</div>
+                                <div id="category-content"></div>
                             </div>
                             <label class="task-form-label" for="subtasks">Subtasks</label>
                             <div class="task-form-subtasks">
@@ -101,7 +103,7 @@
                             <button class="task-clear-button">Clear
                                 <svg class="task-clear-icon"><use href="assets/img/icons.svg#x-icon"></use></svg>
                             </button>
-                            <button class="task-create-button">Create Task
+                            <button class="main-button">Create Task
                                 <svg class="task-create-icon"><use href="assets/img/icons.svg#check-icon"></use></svg>
                             </button>
                         </div>
