--- a/summary.html
+++ b/summary.html
@@ -69,9 +69,21 @@
     </div>   
    
     <header>
-        <div class="headerText">
-        Kanban Project Management Tool</div>     
+        <img class="headerJoinLogo" src="./img/favicon/join.logo-dark.png">
+        <div class="headerText">Kanban Project Management Tool</div>
+        <div class="headerIcons">
+            <a class="header-help" href="help.html" id="id-6">
+                <div><img src="./img/help-icon.png">
+                </div> </a>
+              <div>
+                <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
+             </div>
+         </div>
+        </div>
     </header>
+
+    <div id="header-logout"></div>
+    
     
     <div>
        <!---- <h2>Contactliste</h2> ----->
