--- a/help.html
+++ b/help.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/sidebar.css">
     <link rel="stylesheet" href="./css/contacts.css">
     <link rel="stylesheet" href="./css/header.css">
-<head>
+    <link rel="stylesheet" href="./css/inter.css">
+</head>
 
 <body>
     <div class="navMainContent" id="navMainContent">
@@ -83,11 +84,8 @@
 
     <div id="header-logout"></div>
     
+    
     <div>
        <!---- <h2>Contactliste</h2> ----->
-        <p class="headline">Contacts</p>
+        <p class="headline">Help</p>
     </div>
-
- 
-</body>
-</html>
