--- a/contacts.html
+++ b/contacts.html
@@ -90,6 +90,9 @@
         <div class="textBetter">Better with a team</div>
     </div>
     
+    <div class="contact-book-main" id="contact-book"></div>
+   
+
     
  
 </body>
