--- a/help.html
+++ b/help.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./css/contacts.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/inter.css">
+    <link rel="stylesheet" href="./css/help.css">
 </head>
 
 <body>
@@ -66,26 +68,27 @@
                 </div>
             </a>
         </div>
-    </div>   
-   
+    </div>
+
     <header>
         <img class="headerJoinLogo" src="./img/favicon/join.logo-dark.png">
         <div class="headerText">Kanban Project Management Tool</div>
         <div class="headerIcons">
             <a class="header-help" href="help.html" id="id-6">
                 <div><img src="./img/help-icon.png">
-                </div> </a>
-              <div>
+                </div>
+            </a>
+            <div>
                 <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
-             </div>
-         </div>
+            </div>
+        </div>
         </div>
     </header>
 
     <div id="header-logout"></div>
+
     
-    
-    <div>
-       <!---- <h2>Contactliste</h2> ----->
-        <p class="headline">Help</p>
-    </div>
+
+</body>
+
+</html>
