--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help</title>
-    <link rel="icon" type="image/x-icon" href="./img/join-favicon.png">
+    <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
     <script src="js/header.js"></script>
     <script src="js/script.js"></script>
 
