--- a/summary.html
+++ b/summary.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
+    <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">e>
+
     <script src="js/header.js"></script>
     <script src="js/script.js"></script>
     
