favicon all sections

--- a/board.html
+++ b/board.html
@@ -12,6 +12,8 @@
     <script src="js/board.js" defer></script>
     <script src="script.js" defer></script>
     <title>Board</title>
+    <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
+    
   </head>
   <body onload="updateHTML()">
     <head></head>
