--- a/task.html
+++ b/task.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Add Task</title>
-
+    <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/inter.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/task.css">
