--- a/board.html
+++ b/board.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
     
   </head>
-  <body onload="updateHTML()">
+  <body onload="updateHTML();init()">
     <head></head>
     <div>sidebar</div>
     <section class="boardHeader">
