--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/help.css">
 </head>
 
-<body onload="Init(); includeHTML();">
+<body onload="Init(); includeHTML(); addActiveClass6();">
 
     <div w3-include-html="assets/templates/header.html"></div>
 
