--- a/task.html
+++ b/task.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/task.css">
 </head>
 
-<body onload="init()">
+<body onload="init(),addActiveClass2()">
     <header class="header"></header>
     <div class="task-container">
         <section class="sidebar"></section>
