Board Edit Task

--- a/board.html
+++ b/board.html
@@ -21,8 +21,11 @@
     <script src="script.js" defer></script>
 
     <title>Board</title>
-    <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
-    
+    <link
+      rel="shortcut icon"
+      href="./img/favicon/join-favicon.png"
+      type="image/x-icon"
+    />
   </head>
   <body onload="updateHTML();init()">
     <head></head>
