--- a/task.html
+++ b/task.html
@@ -19,7 +19,7 @@
         <section class="main">
             <h1 class="task-heading-h1">Add Task</h1>
             <div class="task-form-container">
-                <form class="task-form" onsubmit="addTask(); return false">
+                <form class="task-form" onsubmit="addTask(); return false" autocomplete="off">
                     <div class="task-form-subcontainer">
                         <div class="task-input-container">
                             <label class="task-form-label" for="title">
@@ -27,15 +27,17 @@
                                     <use href="assets/img/icons.svg#star-icon"></use>
                                 </svg>
                             </label>
-                            <input class="task-form-input" type="text" name="title" id="title" placeholder="Enter a title"
-                                required>
+                            <input class="task-form-input" type="text" name="title" id="title"
+                                placeholder="Enter a title" required>
                             <label class="task-form-label" for="description">Description</label>
                             <div class="task-form-text-wrapper">
-                                <textarea class="task-form-text" name="text" id="description" placeholder="Enter a Description"
-                                required></textarea>
-                                <svg class="task-form-resize-icon"><use href="assets/img/icons.svg#resize-icon"></use></svg>
+                                <textarea class="task-form-text" name="text" id="description"
+                                    placeholder="Enter a Description"></textarea>
+                                <svg class="task-form-resize-icon">
+                                    <use href="assets/img/icons.svg#resize-icon"></use>
+                                </svg>
                             </div>
-                            
+
                             <label class="task-form-label" for="assign">Assigned to</label>
                             <div class="task-dropdown-container">
                                 <span id="arrow-assign" class="task-arrow-dropdown" onclick="toggleAssignDropdown()">
@@ -43,8 +45,13 @@
                                         <use href="assets/img/icons.svg#arrow-icon"></use>
                                     </svg>
                                 </span>
-                                <input class="task-assign" id="assign" type="text"  name="assign" value="Select contacts to assign" onclick="toggleAssignDropdown()">
-                                <div id="assign-content"></div>
+                                <input class="task-assign" id="assign" type="text" name="assign"
+                                    value="Select contacts to assign" onclick="toggleAssignDropdown()">
+                                <div id="assign-content" class="assign-content d-none">
+                                    <div class="assign-overlay" id="assign-overlay" onclick="closeAssignDropdown()"></div>
+                                    <div class="assign-dropdown-menu" id="assign-dropdown-menu"></div>
+                                    <div class="assign-button-container" id="assign-button-container"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="task-input-container">
@@ -56,17 +63,20 @@
                             <input class="task-form-date" type="date" name="date" id="date" max="2025-12-31" required>
                             <div class="task-form-label">Prio</div>
                             <div class="task-form-prio">
-                                <div class="task-form-btn" id="urgent-btn" onclick="selectPrioButton('urgent-btn')">Urgent
+                                <div class="task-form-btn" id="urgent-btn" onclick="selectPrioButton('urgent-btn')">
+                                    Urgent
                                     <svg class="task-form-urgent-icon" viewBox="0 0 21 16">
                                         <use href="assets/img/icons.svg#urgentprio-icon"></use>
                                     </svg>
                                 </div>
-                                <div class="task-form-btn" id="medium-btn" onclick="selectPrioButton('medium-btn')">Medium
+                                <div class="task-form-btn" id="medium-btn" onclick="selectPrioButton('medium-btn')">
+                                    Medium
                                     <svg class="task-form-medium-icon" viewBox="0 0 21 8">
                                         <use href="assets/img/icons.svg#mediumprio-icon"></use>
                                     </svg>
                                 </div>
-                                <div class="task-form-btn" id="low-btn" onclick="selectPrioButton('low-btn')">Low
+                                <div class="task-form-btn" id="low-btn" onclick="selectPrioButton('low-btn')">
+                                    Low
                                     <svg class="task-form-low-icon" viewBox="0 0 21 16">
                                         <use href="assets/img/icons.svg#lowprio-icon"></use>
                                     </svg>
@@ -78,16 +88,18 @@
                                 </svg>
                             </div>
                             <div class="task-dropdown-container">
-                                <span id="arrow-category" class="task-arrow-dropdown" onclick="toggleCategoryDropdown()">
+                                <span id="arrow-category" class="task-arrow-dropdown"
+                                    onclick="toggleCategoryDropdown()">
                                     <svg viewBox="0 0 8 5">
                                         <use href="assets/img/icons.svg#arrow-icon"></use>
                                     </svg>
                                 </span>
-                                <div class="task-category" id="category" onclick="toggleCategoryDropdown()">Select task category</div>
+                                <input class="task-category" id="category" placeholder="Select task category" type="text"
+                                    onkeydown="return false;" required onclick="toggleCategoryDropdown()">
                                 <div id="category-content"></div>
                             </div>
                             <label class="task-form-label" for="subtasks">Subtasks</label>
-                            <div class="task-form-subtasks" id="subtasks-container">
+                            <div class="task-form-subtasks">
                                 <input class="task-form-input m-b05" type="text" name="subtasks" id="subtasks"
                                     placeholder="Add new subtask">
                                 <div onclick="addSubtask()">
@@ -95,6 +107,7 @@
                                         <use href="assets/img/icons.svg#add-icon"></use>
                                     </svg>
                                 </div>
+                                <div id="subtasks-container"></div>
                             </div>
                         </div>
                     </div>
@@ -105,11 +118,15 @@
                             </svg>This field is required
                         </div>
                         <div class="task-submit-buttons">
-                            <button class="task-clear-button" type="reset">Clear
-                                <svg class="task-clear-icon"><use href="assets/img/icons.svg#x-icon"></use></svg>
+                            <button class="task-clear-button" type="reset" onclick="resetForm()">Clear
+                                <svg class="task-clear-icon">
+                                    <use href="assets/img/icons.svg#x-icon"></use>
+                                </svg>
                             </button>
-                            <button class="main-button" type="submit">Create Task
-                                <svg class="task-create-icon"><use href="assets/img/icons.svg#check-icon"></use></svg>
+                            <button class="main-button" type="submit" id="create-task">Create Task
+                                <svg class="task-create-icon">
+                                    <use href="assets/img/icons.svg#check-icon"></use>
+                                </svg>
                             </button>
                         </div>
                     </div>
