task render initials

--- a/task.html
+++ b/task.html
@@ -54,6 +54,7 @@
                                     <div class="assign-dropdown-menu" id="assign-dropdown-menu"></div>
                                     <div class="assign-button-container" id="assign-button-container"></div>
                                 </div>
+                                <div id="initials-content"></div>
                             </div>
                         </div>
                         <div class="task-input-container">
