--- a/board.html
+++ b/board.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/inter.css" />
-    <link rel="stylesheet" href="css/open_sans.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/board.css" />
+    <link rel="stylesheet" href="./css/inter.css" />
+    <link rel="stylesheet" href="./css/open_sans.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/board.css" />
 
-    <link rel="stylesheet" href="css/task.css" />
+    <link rel="stylesheet" href="./css/task.css" />
 
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="./css/header.css" />
@@ -28,12 +28,9 @@
     />
   </head>
   <body onload="updateHTML(), includeHTML()">
-    <header w3-include-html="./assets/templates/test_header.html"></header>
-    <section
-      w3-include-html="./assets/templates/test_sidebar.html"
-      class="navMainContent"
-      id="navMainContent"
-    ></section>
+    <header w3-include-html="./assets/templates/header.html"></header>
+    <section w3-include-html="./assets/templates/sidebar.html"></section>
+
     <section class="boardHeaderContainer">
       <div class="boardHeader">
         <h1>Board</h1>
