--- a/task.html
+++ b/task.html
@@ -30,7 +30,7 @@
                                 </svg>
                             </label>
                             <input class="task-form-input" type="text" name="title" id="title"
-                                placeholder="Enter a title" required>
+                                placeholder="Enter a title" minlength="2" required>
                             <label class="task-form-label" for="description">Description</label>
                             <div class="task-form-text-wrapper">
                                 <textarea class="task-form-text" name="text" id="description"
@@ -140,6 +140,7 @@
 
     <script src="js/script.js"></script>
     <script src="js/add_task.js"></script>
+    <script src="js/users.js"></script>
     <script src="js/storage.js"></script>
 </body>
 
