Summary if no Urgent Task

--- a/summary.html
+++ b/summary.html
@@ -89,7 +89,9 @@
             <div class="sumUrgentDevider"></div>
             <div>
               <div class="nextUrgentDate" id="nextUrgentDate">date</div>
-              <div class="nextUrgentDateText">Upcoming Deadline</div>
+              <div class="nextUrgentDateText" id="nextUrgentDateText">
+                Upcoming Deadline
+              </div>
             </div>
           </div>
 
