--- a/task.html
+++ b/task.html
@@ -42,13 +42,13 @@
 
                             <label class="task-form-label" for="assign">Assigned to</label>
                             <div class="task-dropdown-container">
-                                <span id="arrow-assign" class="task-arrow-dropdown" onclick="toggleAssignDropdown()">
+                                <span id="arrow-assign" class="task-arrow-dropdown">
                                     <svg viewBox="0 0 8 5">
                                         <use href="assets/img/icons.svg#arrow-icon"></use>
                                     </svg>
                                 </span>
                                 <input class="task-assign" id="assign" type="text" name="assign"
-                                    placeholder="Select contacts to assign" onclick="toggleAssignDropdown()">
+                                    placeholder="Select contacts to assign">
                                 <div id="assign-content" class="assign-content d-none">
                                     <div class="assign-overlay" id="assign-overlay" onclick="closeAssignDropdown()"></div>
                                     <div class="assign-dropdown-menu" id="assign-dropdown-menu"></div>
