--- a/help.html
+++ b/help.html
@@ -22,7 +22,7 @@
     <div w3-include-html="assets/templates/header.html"></div>
 
     <div w3-include-html="assets/templates/sidebar.html"></div>
-
+    <div class="headlineContacts">help</div>
     <script>
         includeHTML();
     </script>
