--- a/board.html
+++ b/board.html
@@ -30,9 +30,13 @@
     />
   </head>
   <body onload="init(), updateHTML()">
+    <!----Mona 
     <header w3-include-html="./assets/templates/header.html"></header>
-    <section w3-include-html="./assets/templates/sidebar.html"></section>
+    <section w3-include-html="./assets/templates/sidebar.html"></section> -->
+    
+    <div w3-include-html="assets/templates/header.html"></div>
 
+    <div w3-include-html="assets/templates/sidebar.html"></div>
     <section class="boardHeaderContainer">
       <div class="boardHeader">
         <h1>Board</h1>
