--- a/help.html
+++ b/help.html
@@ -21,10 +21,15 @@
     <link rel="stylesheet" href="./css/legal-notice.css" />
   </head>
 
-  <!-- <body onload="Init(); includeHTML(); addActiveClass6();"> -->
-  <body onload="includeHTML()">
-    <header w3-include-html="./assets/templates/header.html"></header>
-    <section w3-include-html="./assets/templates/sidebar.html"></section>
+  <!----<body onload="Init(); includeHTML(); addActiveClass6();"> -->
+   
+   <body onload="includeHTML()">
+  <!---- <header w3-include-html="./assets/templates/header.html"></header>
+    <section w3-include-html="./assets/templates/sidebar.html"></section>-->
+
+    <div w3-include-html="assets/templates/header.html"></div> 
+
+    <div w3-include-html="assets/templates/sidebar.html"></div>
     <img
       class="backArrow"
       onclick="history.back()"
@@ -133,14 +138,12 @@
         </div>
       </div>
 
-<<<<<<< HEAD
+      <!---
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <div class="headlineContacts">help</div>
-=======
       <h2 class="mb24">Enjoy using Join!</h2>
-    </section>
+    </section>-->
 
->>>>>>> 9e74b59ef12aeb4622f637a16babaa0befc2895b
     <script>
       includeHTML();
     </script>
