--- a/board.html
+++ b/board.html
@@ -119,5 +119,8 @@
         ></div>
       </div>
     </section>
+
+    <div w3-include-html="assets/templates/mobile.html"></div>
+
   </body>
 </html>
