--- a/help.html
+++ b/help.html
@@ -138,14 +138,13 @@
         </div>
       </div>
 
+      <div w3-include-html="assets/templates/mobile.html"></div>
+
       <!---
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <div class="headlineContacts">help</div>
       <h2 class="mb24">Enjoy using Join!</h2>
     </section>-->
 
-    <script>
-      includeHTML();
-    </script>
   </body>
 </html>
