--- a/summary.html
+++ b/summary.html
@@ -146,5 +146,7 @@
         </div>
       </div>
     </section>
+    <div w3-include-html="assets/templates/mobile.html"></div>
+
   </body>
 </html>
