--- a/task.html
+++ b/task.html
@@ -143,6 +143,8 @@
             </div>
         </div>
     </section>
+    <div w3-include-html="assets/templates/mobile.html"></div>
+
 
     <script src="js/script.js"></script>
     <script src="js/add_task.js"></script>
