--- a/board.html
+++ b/board.html
@@ -21,6 +21,7 @@
     <script src="js/script.js" defer></script>
     <script src="js/add_task.js" defer></script>
     <script src="js/storage.js" defer></script>
+    <script src="js/header.js"></script>
 
     <title>Board</title>
     <link
@@ -53,7 +54,7 @@
       </div>
     </section>
     <section class="boradContent" id="boradContent">
-      <div class="sectionDragArea">
+      <div cgilass="sectionDragArea">
         <div class="headerDragArea">
           <h2>To do</h2>
           <img
