--- a/task.html
+++ b/task.html
@@ -140,6 +140,14 @@
                         </div>
                     </div>
                 </form>
+                <div class="loader-overlay d-none" id="loader-overlay"></div>
+                <div id="loader"></div>
+                <div class="success d-none" id="success">
+                <div class="success-container">
+                    <span class="success-message">Task added to board</span>
+                    <img class="board-icon" src="img/board-icon.svg" alt="Board icon">
+                </div>
+            </div>
             </div>
         </div>
     </section>
