MinDate / Legal Notice Logged Out
MinDate added to Calenders on Board
Logged Out Version of Legal Notice and Privacy Policy added

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <footer>
       <div class="footer-container">
-        <a class="footer-link" href="privacy_policy.html">Privacy Policy</a>
-        <a class="footer-link" href="legal_notice.html">Legal Notice</a>
+        <a class="footer-link" href="privacy_policy_out.html">Privacy Policy</a>
+        <a class="footer-link" href="legal_notice_out.html">Legal Notice</a>
       </div>
     </footer>
   </div>
