--- a/contacts.html
+++ b/contacts.html
@@ -22,6 +22,8 @@
     <script src="js/contacts.js"></script>
     <script src="js/contacts-templates.js"></script>
     <script src="js/add_task.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/users.js"></script>
 
     <head>
 
