signup base functionality

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </div>
           </div>
           <div class="login-remember">
-            <img class="unchecked-icon" src="img/login/unchecked.svg" alt="Unchecked Box" id="unchecked" onclick="toggleCheckIcon()">
+            <img class="checkbox-icon" src="img/login/unchecked.svg" alt="Checkbox" id="unchecked" onclick="toggleCheckIcon()">
             <span class="login-remember-text">Remember Me</span>
           </div>
           <div class="login-button-container">
             <button type="submit" class="main-button">Log in</button>
-            <button type="button" class="main-button main-button-white">Guest Log in</button>
+            <button type="button" class="main-button main-button-white" onclick="guestLogin()">Guest Log in</button>
           </div>
         </form>
       </div>
