Responsive Board/Summary/Legal

--- a/board.html
+++ b/board.html
@@ -38,16 +38,22 @@
     <div w3-include-html="assets/templates/sidebar.html"></div>
     <section class="boardHeaderContainer">
       <div class="boardHeader">
-        <h1>Board</h1>
+        <div class="boardHeaderMobile">
+          <h1>Board</h1>
+          <button class="addTaskMobile" onclick="location.href ='task.html'">
+            <img src="img/board_add_taks.png" alt="" />
+          </button></div>
+        
         <div class="boardHeaderInteract">
           <div class="inputWithImg">
             <input id="findTask" type="text" placeholder="Find Task" />
             <div class="findTaskImg" onclick="searchTask()"></div>
           </div>
-          <button onclick="addTaskOnBoard('toDoStatus'); includeHTML()">
+          <button class="addTaskDesktop" onclick="addTaskOnBoard('toDoStatus'); includeHTML()">
             Add task
             <img src="img/board_add_taks.png" alt="" />
           </button>
+          
         </div>
       </div>
     </section>
@@ -57,10 +63,15 @@
           <h2>To do</h2>
           <img
             onclick="addTaskOnBoard('toDoStatus')"
-            class="addTaskToSection"
+            class="addTaskToSection addTaskDesktop"
             src="img/board_plus_button.svg"
             alt="Add Task to to do"
           />
+          <img
+          class="addTaskMobile" onclick="location.href ='task.html'"
+          src="img/board_plus_button.svg"
+          alt="Add Task to to do"
+        />
         </div>
         <div
           id="toDo"
@@ -75,10 +86,15 @@
           <h2>In pogress</h2>
           <img
             onclick="addTaskOnBoard('inProgressStatus')"
-            class="addTaskToSection"
+            class="addTaskToSection addTaskDesktop"
             src="img/board_plus_button.svg"
             alt="Add Task to in Progress"
           />
+          <img
+          class="addTaskMobile" onclick="location.href ='task.html'"
+          src="img/board_plus_button.svg"
+          alt="Add Task to in Progress"
+        />
         </div>
         <div
           id="inProgress"
@@ -93,10 +109,15 @@
           <h2>Await feedback</h2>
           <img
             onclick="addTaskOnBoard('awaitFeedbackStatus')"
-            class="addTaskToSection"
+            class="addTaskToSection addTaskDesktop"
             src="img/board_plus_button.svg"
             alt="Add Task to Await Feedback"
           />
+          <img
+          class="addTaskMobile" onclick="location.href ='task.html'"
+          src="img/board_plus_button.svg"
+          alt="Add Task to Await Feedback"
+        />
         </div>
         <div
           id="awaitFeedback"
