--- a/summary.html
+++ b/summary.html
@@ -38,6 +38,7 @@
         <h1>Join 360</h1>
         <div class="sumHeadDevider"></div>
         <span class="sumHeadSlogan">Key Metrics at a Glance</span>
+        <div class="sumHeadDeviderMobile"></div>
       </div>
       <div class="summaryMainContent">
         <div class="summaryBoxes">
