contacts function naming

--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,7 @@
             <div class="borderStyle"></div>
             <div class="textBetter">Better with a team</div>
         </div>
-        <div class="addContactBtn" onclick="showAddNewContact()">
+        <div class="addContactBtn" onclick="showOverlay()">
             <div class="addContactBtn-text">New contact</div>
             <img class="addContactImg" src="./img/new-contact.png">
         </div>
