Logedin User Summary / Contact Page Copy
Logedin User gets greeted with Name on Summary Page

Reworked Contacted Page (contact_copy)

--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <title>Contacts</title>
     <link rel="shortcut icon" href="./img/favicon/join-favicon.png" type="image/x-icon">
 
+    <link rel="stylesheet" href="./css/inter.css" />
     <link rel="stylesheet" href="./css/sidebar.css">
     <link rel="stylesheet" href="./css/contacts.css">
     <link rel="stylesheet" href="./css/contacts-overlay.css">
