--- a/summary.html
+++ b/summary.html
@@ -137,14 +137,14 @@
         </div>
 
         <div class="userGreet">
-          <div id="timedGreeting">Good morning,</div>
-          <div id="logedinUser">Guest-js einbinden</div>
+          <div id="timedGreeting"></div>
+          <div id="logedinUser"></div>
         </div>
       </div>
     </section>
     <section id="mobileGreet">
-      <div id="mobileTimedGreeting">Good morning,</div>
-      <div id="mobileLogedinUser">Guest-js einbinden</div>
+      <div id="mobileTimedGreeting"></div>
+      <div id="mobileLogedinUser"></div>
     </section>
     <div w3-include-html="assets/templates/mobile.html"></div>
   </body>
