Add new Contact function

--- a/contacts_copy.html
+++ b/contacts_copy.html
@@ -45,14 +45,14 @@
       <div class="textBetter">Better with a team</div>
     </div>
     <section class="contactOverview">
-      <button class="addContactBtn">
+      <button class="addContactBtn" onclick="showOverlay()">
         Add new contact
         <img src="./img/person_add.svg" alt="Add Contact" />
       </button>
       <div id="contact-book"></div>
     </section>
     <div id="contactInfoContainer"></div>
-
+    <div id="newContactContainer"></div>
     <div w3-include-html="assets/templates/mobile.html"></div>
   </body>
 </html>
