--- a/contacts.html
+++ b/contacts.html
@@ -57,7 +57,7 @@
         <div id="newContactContainer"></div>
         
         <!--- JS -->
-        <div class="contact-book-main" id="contact-book">push and save Contacts/Users.Array
+        <div class="contact-book-main" id="contact-book">
 
         </div>
         <div class="contact-book-main-rs" id="contact-book-rs"></div>
