--- a/task.html
+++ b/task.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/task.css">
+    <link rel="stylesheet" href="css/task_responsive.css">
     <link rel="stylesheet" href="css/contacts-overlay.css">
     <link rel="stylesheet" href="css/contacts-overlay-responsive.css">
 </head>
